# py-app-pilot

./: README.md  pyproject.toml
src/py_app_pilot/: py_app_pilot.py
src/py_app_pilot/resources/: author.qrc
