[project]

name = "py-app-pilot"
version = "1.0.0"
description = "PyPilot - A powerful Python application management tool with GUI interface, supporting app lifecycle management, process monitoring, log viewing, and environment configuration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15.0",
    "psutil>=5.9.0",
    "sqlalchemy>=2.0.0",
    "loguru"
]
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
[tool.uv.sources]
resources = {path = "py_app_pilot/resources/logo.jpg" }
